libs/@local/hashql/hir/tests/ui/lower/inference/dict-multi-key.jsonc
//@ run: fail
//@ description: Multiple key type dict inference
{ "#dict": [
  [{"#literal": 42}, { "#literal": 42 }],
  //~^ ERROR Previously constrained to be exactly `Integer`
  [{"#literal": "b"}, { "#literal": 43.0 }],
  //~^ ERROR But here constrained to be exactly `String`
  [{"#literal": "c"}, { "#literal": "foo" }]
  //~^ ERROR But here constrained to be exactly `String`
]
}
